k8s/apps/litomi/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litomi-api
spec:
  selector:
    matchLabels:
      app: litomi-api
  template:
    metadata:
      labels:
        app: litomi-api
    spec:
      automountServiceAccountToken: false
      containers:
        - name: api
          image: litomi-api:prod
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /startup
              port: 3002
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /ready
              port: 3002
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 1
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 160m
              memory: 1280Mi
            limits:
              cpu: 1200m
              memory: 1536Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: litomi-api
spec:
  selector:
    app: litomi-api
  ports:
    - port: 3002
