k8s/apps/litomi/base/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litomi-backend
spec:
  selector:
    matchLabels:
      app: litomi-backend
  template:
    metadata:
      labels:
        app: litomi-backend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: backend
          image: litomi-backend:prod
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              path: /startup
              port: 3002
            periodSeconds: 3
            timeoutSeconds: 3
            failureThreshold: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 3002
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 1
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 640Mi
            limits:
              cpu: 500m
              memory: 896Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: litomi-backend
spec:
  selector:
    app: litomi-backend
  ports:
    - port: 3002
