k8s/apps/litomi/base/srh.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: srh
  template:
    metadata:
      labels:
        app: srh
    spec:
      containers:
        - name: srh
          image: hiett/serverless-redis-http:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: srh
spec:
  selector:
    app: srh
  ports:
    - name: http
      port: 80
      targetPort: 80
